# xd-layers

./: .gitignore  CMakeLists.txt  README.md  TurbineHousing.tlb  compile_commands.json
.cache/clangd/index/: BufferReadBinary.cpp.1FECA2E5A3696377.idx  BufferReadBinary.h.A8F6D09393C0CD92.idx  BufferWrite.cpp.9E91B90CED2BD21C.idx  BufferWrite.h.FD34E78D1A64BEBB.idx  Configurations.cpp.E633FB46E1F6019F.idx  Configurations.h.756179D974CDBDC8.idx  Cross.cpp.6CDA1B1B69A7E551.idx  Cross.h.66B6FB020B4BF3D1.idx  DoubleToString.cpp.436BDBE6F1B0E7F0.idx  DoubleToString.h.922CAEB117EE53E0.idx  GCode.cpp.12436607EF19A856.idx  GCode.h.B48C2398D1BECE84.idx  Layer.cpp.8353866D2EEDDE23.idx  Layer.h.46E97539C2B0D66F.idx  Loop.cpp.C7CF2A185417747F.idx  Loop.h.32EC6AD0BFAF0913.idx  RobogenSlicer.cpp.D3CD9B9F4A11205D.idx  RobogenSlicer.h.E84CBC386996C329.idx  STL.cpp.9EFD629673F7716A.idx  STL.h.BB97353F37B575D7.idx  Slicer.cpp.77A30E32227C4282.idx  Slicer.h.BC4934A4051A63E3.idx  Slicing.cpp.0ED736FC440FFF76.idx  Slicing.h.5C04F91E883F277D.idx  Triangle.cpp.C4EB18F89CB42B5C.idx  Triangle.h.4C8171AADB170C93.idx  Vec2d.cpp.7D578B8B409C0716.idx  Vec2d.h.E7F8454CACA248B5.idx  Vec3d.cpp.E349F86B7D1E29E2.idx  Vec3d.h.2148AC5CE41B3A56.idx  main.cpp.7FC39A2E1CCE92A5.idx
dependences/RobogenSlicer/: CMakeLists.txt
dependences/RobogenSlicer/include/: RobogenSlicer.h  Slicer.h  Triangle.h
dependences/RobogenSlicer/lib/Debug/: RobogenSlicer.lib
dependences/RobogenSlicer/src/: Configurations.cpp  RobogenSlicer.cpp  Vec3d.cpp
dependencies/RobogenSlicer/include/: Slicer.h
dependencies/RobogenSlicer/src/: BufferReadBinary.cpp  Configurations.cpp  Layer.cpp  STL.cpp  Slicer.cpp  Slicing.cpp
include/: BufferReadBinary.h  BufferWrite.h  Slicing.h
script/: clean.bat  run.bat
src/: Slicer.cpp  Slicing.cpp  Triangle.cpp  gcode_filescube.gcode  main.cpp
